--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,5 @@
+@import "styles/variables";
+
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
@@ -13,10 +15,11 @@
       --popover: 0 0% 100%;
       --popover-foreground: 222.2 84% 4.9%;
 
-      --primary: 222.2 47.4% 11.2%;
+      --primary: 344, 84%, 43%;
       --primary-foreground: 210 40% 98%;
 
-      --secondary: 210 40% 96.1%;
+      //--secondary: 210 40% 96.1%;
+      --secondary: 344, 84%, 25%;
       --secondary-foreground: 222.2 47.4% 11.2%;
 
       --muted: 210 40% 96.1%;
