--- a/src/_pages/product-page/styles.module.scss
+++ b/src/_pages/product-page/styles.module.scss
@@ -45,7 +45,6 @@
 			flex-direction: column;
 			gap: 16px;
 			margin-top: 24px;
-
 			@media (min-width: 768px) {
 				border-radius: 10px;
 				width: 50%;
@@ -53,7 +52,7 @@
 				gap: 24px;
 			}
 			height: 100%;
-			padding: 10px;
+			padding: 10px 10px 48px 10px;
 
 			.name {
 				display: flex;
