--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -1,5 +1,16 @@
-.dark{
-	--bg-main:black;
+.men{
+	//--bg-main: #2C3A6F;
+	//--bg-secondary:#1F2D4D;
+	//--destructive: #3030C5;
+	//--product-bg:#27355C;
 
-	--white:#FFF;
+	--white: white;
+	//Var 1
+	--bg-main: #3A3330;
+	--bg-secondary:#26211E;
+	--destructive: #C53030;
+	--product-bg:#2E2826;
+
+	--text-primary: #FFFFFF;
+	--text-secondary: #D0D0D0;
 }
