--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -1,7 +1,34 @@
-:root{
-	--bg-main:#3a3330;
-	--bg-secondary:#26211e;
-	--product-bg:#2e2826;
-
+.women{
+	//--bg-main:#3a3330;
+	//--bg-secondary:#26211e;
+	//--product-bg:#2e2826;
+	//
 	--white:#FFF;
+
+	//Малина 1
+	//--bg-main:#8B253E;
+	//--bg-secondary:#62192A;
+	//--product-bg:#751F2B;
+
+	// Малина 2
+	//--bg-main: #4A3739;
+	//--bg-secondary:#3E2C2A;
+	//--product-bg:#503131;
+
+	//Малина 3
+	--bg-main: #6F2C3A;
+	--bg-secondary:#4D1F2D;
+	--destructive: #C53030;
+	--product-bg:#5C2735;
+
+//	Light colors
+//	--bg-main: #F7F4F8;
+//	--bg-secondary:#F0E7EA;
+//	--destructive: #F44336;
+//	--product-bg:#F3D8E4;
+
+	--text-primary:#FFF;
+	--text-secondary: #E0E0E0;
+	//--text-primary:#333333;
+	//--text-secondary:#777777;
 }
