--- a/src/shared/ui/h2/styles.module.scss
+++ b/src/shared/ui/h2/styles.module.scss
@@ -8,3 +8,13 @@
 	font-size: 14px;
 	line-height: 18px;
 }
+
+.m{
+	font-size: 22px;
+	line-height: 24px;
+
+	@media (min-width: 768px) {
+		font-size: 28px;
+		line-height: 36px;
+	}
+}
