feat: add items

--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -3,7 +3,7 @@
 	//--bg-secondary:#1F2D4D;
 	//--destructive: #3030C5;
 	//--product-bg:#27355C;
-
+	--dividing-line-header: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
 	--white: white;
 	//Var 1
 	--bg-main: #3A3330;
