--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -4,9 +4,11 @@
 	--text-gray: #555;
 	--product-btn: #8f8480;
 
+	//Bg
+	--overlay-bg: rgba(0, 0, 0, 0.5);
 
 	//Header
-	--dividing-line-header: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);;
+
 
 	//Heights
 	--header-height: 66px;
