--- a/src/shared/ui/flex/styles.module.scss
+++ b/src/shared/ui/flex/styles.module.scss
@@ -8,8 +8,8 @@
 	flex-direction: row;
 }
 .column-reverse{
-	flex-direction: column-reverse;
+	flex-direction: column-reverse !important;
 }
 .row-reverse{
-	flex-direction: row-reverse;
+	flex-direction: row-reverse !important;
 }
