--- a/src/shared/ui/p/styles.module.scss
+++ b/src/shared/ui/p/styles.module.scss
@@ -1,5 +1,5 @@
 .container{
-	color: var(--Text-Primary);
+	color: var(--text-primary);
 	font-size: 16px;
 	font-style: normal;
 	line-height: 22px; /* 137.5% */
