--- a/src/_pages/_main/ui/main-banner.module.scss
+++ b/src/_pages/_main/ui/main-banner.module.scss
@@ -1,16 +1,31 @@
 .pictureContainer {
 	position: relative;
-	height: calc(75vh - 138px);
+	//height: calc(75vh - 138px);
 	min-height: 412px;
-	max-height: 700px;
+	//max-height: 700px;
+	height: 100vh;
 	overflow: hidden;
 	@media (max-width: 768px) {
 		min-height: 320px;
-		height: 25vh;
+		//height: 25vh;
+	}
+
+
+	&.women{
+		.text{
+			background: rgba(0,0,0,0.5);
+
+			& p, & h1, & button{
+				color: var(--white);
+			}
+
+			& button{
+				border-color: var(--white);
+			}
+		}
 	}
 
 	.picture {
-
 		width: 100%;
 		height: 100%;
 
@@ -34,8 +49,7 @@
 		.center{
 			padding: 16px;
 			border-radius: var(--border-l);
-			background-color:transparentize(#26211e, 0.2);
-
+			//background-color:transparentize(#FFF, 0.2);
 		}
 	}
 }
