--- a/src/_pages/_product/styles.module.scss
+++ b/src/_pages/_product/styles.module.scss
@@ -2,7 +2,12 @@
 }
 
 .container {
-background: var(--product-bg);
+	background: var(--product-bg);
+
+	& svg {
+		& path {
+		}
+	}
 }
 
 .imageContainer {
@@ -26,24 +31,30 @@ background: var(--product-bg);
 		left: 0;
 		width: 100%;
 		bottom: 15%;
-
+		background: rgba(0,0,0,0.5);
+		padding: 1rem 0;
 		.info {
 			max-width: 50%;
 		}
 	}
 
-	.featuresDesktop{
+	.featuresDesktop {
 		position: absolute;
 		bottom: 5%;
 		left: 0;
 	}
 }
 
+
 .featureCard {
 	@media (min-width: 768px) {
-		flex-direction: row!important;
+		flex-direction: row !important;
 
-		& h3{
+		&:nth-child(even){
+			flex-direction: row-reverse !important;
+		}
+
+		& h3 {
 			display: flex;
 			width: 100%;
 			height: 100%;
@@ -51,6 +62,8 @@ background: var(--product-bg);
 			align-self: center;
 		}
 	}
+
+
 	& img {
 		object-fit: cover;
 		object-position: center;
