--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -1,9 +1,10 @@
-.women{
+.women {
 	//--bg-main:#3a3330;
 	//--bg-secondary:#26211e;
 	//--product-bg:#2e2826;
 	//
-	--white:#FFF;
+	--white: #FFF;
+	--dividing-line-header: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
 
 	//Малина 1
 	//--bg-main:#8B253E;
@@ -16,19 +17,33 @@
 	//--product-bg:#503131;
 
 	//Малина 3
-	--bg-main: #6F2C3A;
-	--bg-secondary:#4D1F2D;
-	--destructive: #C53030;
-	--product-bg:#5C2735;
+	//--bg-main: #6F2C3A;
+	//--bg-secondary:#4D1F2D;
+	//--destructive: #C53030;
+	//--product-bg:#5C2735;
 
-//	Light colors
-//	--bg-main: #F7F4F8;
-//	--bg-secondary:#F0E7EA;
-//	--destructive: #F44336;
-//	--product-bg:#F3D8E4;
+	//	Light colors
+	//	--bg-main: #F7F4F8;
+	//	--bg-secondary:#F0E7EA;
+	//	--destructive: #F44336;
+	//	--product-bg:#F3D8E4;
 
-	--text-primary:#FFF;
-	--text-secondary: #E0E0E0;
-	//--text-primary:#333333;
-	//--text-secondary:#777777;
+	//v2
+	//--bg-main: #F0F0F0;
+	//--bg-secondary: #D9D9D9;
+	//--product-bg:#C4C4C4;
+	//--text-primary: #2C2C2C;
+	//--text-secondary: #4A4A4A;
+
+
+	//v3
+	--bg-main: #EDEDED;
+	--bg-secondary: #D1D1D1;
+	--text-primary: #333333;
+	--text-secondary: #595959;
+	--product-bg: #C4C4C4;
+	--button-primary: #4D4D4D;
+	--button-hover: #7A7A7A;
+
+	--white:#FFF;
 }
