--- a/src/entities/card-item/styles.module.scss
+++ b/src/entities/card-item/styles.module.scss
@@ -18,7 +18,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
+	position: relative;
 	@media (max-width: 600px) {
 		height: unset;
 		padding: 0;
