--- a/src/shared/ui/h2/styles.module.scss
+++ b/src/shared/ui/h2/styles.module.scss
@@ -7,6 +7,11 @@
 .xs{
 	font-size: 14px;
 	line-height: 18px;
+
+	@media (min-width: 768px) {
+		font-size: 20px;
+		line-height: 24px;
+	}
 }
 
 .m{
