feat: change imgs

--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -44,6 +44,22 @@
 	--product-bg: #C4C4C4;
 	--button-primary: #4D4D4D;
 	--button-hover: #7A7A7A;
+	//
 
-	--white:#FFF;
+	//v4
+	//--bg-main: #E3E4E0;
+	//--bg-secondary: #C1C3BE;
+	//--product-bg: #A4A6A2;
+	//--text-primary: #323533;
+	//--text-secondary: #565956;
+	//--accent-color: #857B70;
+	//--border-color: #9C9387;
+
+	//v5
+	//--bg-main: #F5F5F5;
+	//--bg-secondary: #EAEAEA;
+	//--product-bg: #D6D6D6;
+	//--text-primary: #4A4A4A;
+	//--text-secondary: #7A7A7A;
+
 }
