--- a/src/shared/ui/h2/styles.module.scss
+++ b/src/shared/ui/h2/styles.module.scss
@@ -13,6 +13,15 @@
 		line-height: 24px;
 	}
 }
+.s{
+	font-size: 18px;
+	line-height: 24px;
+
+	@media (min-width: 768px) {
+		font-size: 24px;
+		line-height: 28px;
+	}
+}
 
 .m{
 	font-size: 22px;
