feat: add about us and change womens color

--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -39,8 +39,8 @@
 	//v3
 	--bg-main: #EDEDED;
 	--bg-secondary: #D1D1D1;
-	--text-primary: #333333;
-	--text-secondary: #595959;
+	--text-primary: #1A1A1A;
+	--text-secondary: #404040;
 	--product-bg: #C4C4C4;
 	--button-primary: #4D4D4D;
 	--button-hover: #7A7A7A;
