--- a/src/_pages/_product/styles.module.scss
+++ b/src/_pages/_product/styles.module.scss
@@ -67,7 +67,7 @@
 	& img {
 		object-fit: cover;
 		object-position: center;
-		height: calc(100vw - 107px);
+		height: calc(100vw);
 
 		border-radius: var(--border-l);
 
