feat: add product gallery

--- a/src/_pages/_product/styles.module.scss
+++ b/src/_pages/_product/styles.module.scss
@@ -51,7 +51,7 @@
 		flex-direction: row !important;
 
 		&:nth-child(even){
-			flex-direction: row-reverse !important;
+			//flex-direction: row-reverse !important;
 		}
 
 		& h3 {
