--- a/src/_pages/_main/ui/main-banner.module.scss
+++ b/src/_pages/_main/ui/main-banner.module.scss
@@ -31,10 +31,10 @@
 
 		& img {
 
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			object-position: center;
+			width: 100% !important;
+			height: 100% !important;
+			object-fit: cover !important;
+			object-position: center !important;
 		}
 	}
 	.text{
