--- a/src/_pages/_product/styles.module.scss
+++ b/src/_pages/_product/styles.module.scss
@@ -15,10 +15,10 @@
 	height: 75vh;
 
 	& img {
-		height: 100%;
-		width: 100%;
-		object-position: center;
-		object-fit: cover;
+		height: 100% !important;
+		width: 100% !important;
+		object-position: center !important;
+		object-fit: cover !important;
 		position: absolute;
 	}
 
