feat: test page

--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -37,14 +37,21 @@
 
 
 	//v3
-	--bg-main: #EDEDED;
-	--bg-secondary: #D1D1D1;
+	//--bg-main: #EDEDED;
+	//--bg-secondary: #D1D1D1;
+	//--text-primary: #1A1A1A;
+	//--text-secondary: #404040;
+	//--product-bg: #C4C4C4;
+	//--button-primary: #4D4D4D;
+	//--button-hover: #7A7A7A;
+
+	--bg-main: #FFFFFF;
+	--bg-secondary: #F5F5F5;
 	--text-primary: #1A1A1A;
-	--text-secondary: #404040;
-	--product-bg: #C4C4C4;
+	--text-secondary: #4D4D4D;
+	--product-bg: #E0E0E0;
 	--button-primary: #4D4D4D;
 	--button-hover: #7A7A7A;
-	//
 
 	//v4
 	//--bg-main: #E3E4E0;
