--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -50,7 +50,7 @@
 	--text-primary: #1A1A1A;
 	--text-secondary: #4D4D4D;
 	--product-bg: #E0E0E0;
-	--button-primary: #4D4D4D;
+	--button-primary: #8B253E;
 	--button-hover: #7A7A7A;
 
 	//v4
