--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -11,6 +11,7 @@
 	--destructive: #C53030;
 	--product-bg:#2E2826;
 
+	--button-primary:#2E2826 ;
 	--text-primary: #FFFFFF;
 	--text-secondary: #D0D0D0;
 }
