--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -6,7 +6,9 @@
 	--dividing-line-header: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
 	--white: white;
 	//Var 1
-	--bg-main: #3A3330;
+	//--bg-main: #3A3330;
+	//TODO gradient for men
+	--bg-main: linear-gradient(to bottom, black, #171719);;
 	--bg-secondary:#26211E;
 	--destructive: #C53030;
 	--product-bg:#2E2826;
