feat: add reviews

--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -54,6 +54,7 @@
 	--button-primary: #CB1243;
 	--button-hover: #7A7A7A;
 
+	--gradient: white;
 	//v4
 	//--bg-main: #E3E4E0;
 	//--bg-secondary: #C1C3BE;
