--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -13,6 +13,9 @@
 	--destructive: #C53030;
 	--product-bg:#2E2826;
 
+
+	//--gradient:linear-gradient(to bottom, black, #171719);;;
+	--gradient:black;
 	--button-primary:#2E2826 ;
 	--text-primary: #FFFFFF;
 	--text-secondary: #D0D0D0;
