fix: scroll bug fix

--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -13,6 +13,9 @@
 	--destructive: #C53030;
 	--product-bg:#2E2826;
 
+	--advertising:white;
+	--advertising-text:black ;
+
 
 	//--gradient:linear-gradient(to bottom, black, #171719);;;
 	--gradient:black;
