--- a/src/app/styles/women.scss
+++ b/src/app/styles/women.scss
@@ -6,6 +6,10 @@
 	--white: #FFF;
 	--dividing-line-header: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
 
+
+	--advertising:black;
+	--advertising-text:white ;
+
 	//Малина 1
 	//--bg-main:#8B253E;
 	//--bg-secondary:#62192A;
