--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -103,13 +103,27 @@
 	}
 }
 
-.app {
-	background: var(--bg-main);
+html, body {
+	scroll-behavior: auto;
+}
+#__next {
+	width: 100%;
+	height: 100%;
 }
 
 img {
 	animation: fadein 1s;
+	-khtml-user-select: none;
+	-o-user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
+
+.app {
+	background: var(--bg-main);
+}
+
 
 div {
 	transition: background 0.3s ease;
