--- a/src/_pages/_main/ui/main-banner.module.scss
+++ b/src/_pages/_main/ui/main-banner.module.scss
@@ -3,7 +3,7 @@
 	//height: calc(75vh - 138px);
 	min-height: 412px;
 	//max-height: 100%;
-	height: var(--app-height);
+	height: 100svh;
 	overflow: hidden;
 	@media (max-width: 768px) {
 		min-height: 320px;
