--- a/src/_pages/test/ui/styles.module.scss
+++ b/src/_pages/test/ui/styles.module.scss
@@ -11,3 +11,23 @@
 .gradient-overlay {
 
 }
+
+.hr{
+	width: 100%;
+	height: 1px;
+	position: relative;
+
+	//&::before {
+	//	position: absolute;
+	//	right: 0;
+	//	bottom: 0;
+	//	left: 0;
+	//	height: 1px;
+	//	background: var(--dividing-line-header);
+	//	content: "";
+	//}
+}
+
+.picture{
+	flex: 0 0 90%;
+}
