--- a/src/_pages/test/ui/styles.module.scss
+++ b/src/_pages/test/ui/styles.module.scss
@@ -1,3 +1,11 @@
+.container{
+	& h2, & p{
+		@media (min-width: 768px) {
+			max-width: 50%;
+		}
+	}
+}
+
 .textContainer{
 	position: relative;
 }
