fix: mens bg main

--- a/src/app/styles/men.scss
+++ b/src/app/styles/men.scss
@@ -7,8 +7,10 @@
 	--white: white;
 	//Var 1
 	//--bg-main: #3A3330;
+	--bg-main: black;
 	//TODO gradient for men
-	--bg-main: linear-gradient(to bottom, black, #171719);;
+	//--bg-main: linear-gradient(to bottom, black, #171719);;
+
 	--bg-secondary:#26211E;
 	--destructive: #C53030;
 	--product-bg:#2E2826;
