--- a/src/_pages/test/styles.module.scss
+++ b/src/_pages/test/styles.module.scss
@@ -8,4 +8,11 @@
 	flex: 1;
 	position: relative;
 	//background: var(--bg-main);
+
+	@media (min-width: 768px) {
+		max-width: 768px;
+		margin-right:  auto;
+		margin-left:  auto;
+		margin-top: var(--header-height);
+	}
 }
