feat: done with researches

--- a/src/_pages/analysis-list/ui/main-banner.module.scss
+++ b/src/_pages/analysis-list/ui/main-banner.module.scss
@@ -34,7 +34,7 @@
 			}
 
 			& button {
-				color: var(--text-primary) !important;
+				//color: var(--text-primary) !important;
 
 				//border-color: var(--white);
 			}
